# crawlify-kleine-anfragen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: install-systemd.sh  update_db.py
search-ui/: README.md  run.sh
search-ui/backend/: admin_service.py  config.py  main.py  models.py  requirements.txt  search_service.py
search-ui/frontend/: admin.html  index.html  package-lock.json  package.json  vite.config.js
search-ui/frontend/src/: admin-main.jsx  search-main.jsx
search-ui/frontend/src/admin/: AdminApp.jsx
search-ui/frontend/src/search/: SearchApp.jsx
search-ui/frontend/src/shared/: format.js
search-ui/frontend/src/styles/: admin.css  search.css
search-ui/frontend/static/css/: admin.css
search-ui/frontend/static/js/: admin.js  app.js
src/crawlify/: __init__.py  browser.py  cli.py  config.py  db.py  dip_client.py  embeddings.py  ingest.py  normalize.py  progress.py  search.py  storage.py
systemd/: crawlify-update.service  crawlify-update.timer
tests/: test_dip_client.py
