[project]
name = "crawlify-kleine-anfragen"
version = "0.1.0"
description = "DIP-API client and ingestion for Kleine Anfragen"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
crawlify = "crawlify.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
embeddings = [
  "sentence-transformers>=2.7",
]
browser = [
  "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
