[project]
name = "crawlify-kleine-anfragen"
version = "0.1.0"
description = "DIP-API client and ingestion for Kleine Anfragen"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rene Stemmler"}]
keywords = ["bundestag", "kleine-anfragen", "parliament", "open-data", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
crawlify = "crawlify.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
embeddings = [
  "sentence-transformers>=2.7",
]
browser = [
  "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
